// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentListItem match snapshot when editing 1`] = `
.c1 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 50px;
  width: 100%;
  padding: 0px 10px;
  border-bottom: 1px solid rgb(46,48,51);
}

.c2 {
  color: #bdc1c6;
  font-size: 1rem;
}

.c3 {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  gap: 10px;
}

.c4 {
  background-color: transparent;
  border: none;
  color: #9aa0a6;
}

.c5 {
  background-color: transparent;
  border: none;
  color: palevioletred;
}

.c0 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  position: relative;
  width: 100%;
  min-height: 200px;
  height: 200px;
  border: 2px solid rgb(46,48,51);
  border-radius: 10px;
}

.c6 {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
  height: 100%;
  gap: 20px;
  flex-grow: 1;
  padding: 20px;
}

.c7 {
  width: 100%;
  height: 100%;
  border-radius: 10px;
  background-color: transparent;
  outline: none;
  resize: none;
  padding: 10px;
  font-size: 1rem;
  color: #9aa0a6;
  background-color: rgb(33,33,36);
  cursor: text;
}

.c7 div[contenteditable=true] {
  outline: none;
}

.c8 {
  width: 100px;
  height: 100%;
  border: 2px solid rgb(46,48,51);
  border-radius: 10px;
  background-color: transparent;
  font-size: 1.25rem;
  color: white;
  transition: all 0.5s;
}

.c8:disabled {
  color: #bdc1c6;
  cursor: not-allowed;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        22-02-22
      </span>
      <div
        class="c3"
      >
        <button
          class="c4"
          color="plain"
        >
          취소
        </button>
        <button
          class="c5"
          color="red"
        >
          삭제
        </button>
      </div>
    </div>
    <div
      class="c6"
    >
      <div
        class="c7"
      >
        <div
          contenteditable="true"
        >
          Comment
        </div>
      </div>
      <button
        class="c8"
      >
        쓰기
      </button>
    </div>
  </div>
</div>
`;

exports[`CommentListItem match snapshot when viewmode 1`] = `
.c1 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 50px;
  width: 100%;
  padding: 0px 10px;
  border-bottom: 1px solid rgb(46,48,51);
}

.c2 {
  color: #bdc1c6;
  font-size: 1rem;
}

.c3 {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  gap: 10px;
}

.c4 {
  background-color: transparent;
  border: none;
  color: #9aa0a6;
}

.c5 {
  background-color: transparent;
  border: none;
  color: palevioletred;
}

.c6 {
  padding: 10px;
  color: #9aa0a6;
  width: 100%;
  flex-grow: 1;
}

.c0 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  position: relative;
  width: 100%;
  min-height: 200px;
  height: 200px;
  border: 2px solid rgb(46,48,51);
  border-radius: 10px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        22-02-22
      </span>
      <div
        class="c3"
      >
        <button
          class="c4"
          color="plain"
        >
          수정
        </button>
        <button
          class="c5"
          color="red"
        >
          삭제
        </button>
      </div>
    </div>
    <p
      class="c6"
    >
      Comment
    </p>
  </div>
</div>
`;
